--- a/style.css
+++ b/style.css
@@ -31,3 +31,16 @@ a{
     font-weight: bold;
     color: black;
 }
+
+
+@media screen and (max-width: 400px)
+{  
+    a{
+       
+        height: 5vh;
+        width: 50vw;
+        
+    }
+
+}
+
