--- a/Css/stylesr.css
+++ b/Css/stylesr.css
@@ -100,6 +100,8 @@ a{
 {  
     .title{
         text-align: center;
+        font-size:3rem;
+        padding-top: 2rem;
     }
     .score{
         position: absolute;
@@ -109,4 +111,49 @@ a{
     .options{
         width: 100vw;
     }
+}
+
+
+@media screen and (max-width: 400px)
+{  
+    .title{
+        text-align: center;
+    }
+    .p-count,.c-count{
+        text-align: center;
+        font-size: 1rem;
+        margin-top: 1rem;
+    }
+    .score{
+        position: absolute;
+        top: 150px;
+        width: 80vw;
+    }
+    .options{
+        width: 80vw;
+    }
+    .move{
+        font-size: 2rem;
+        font-weight: bold;
+        margin-top: 1rem;
+    }
+h2{
+    font-size: 1.5rem;
+}
+    .rock, .paper, .scissor{
+        padding: 0.8rem;
+        width: 65px;
+        border-radius: 10px;
+        background: rgb(96, 33, 177);
+        outline: none;
+        border-color: green;
+        border: none;
+        cursor: pointer;
+    }
+    .exit{
+        width: 25vw;
+        height: 5vh;
+        margin-top: 5vh;
+    }
+    
 }
